--- a/css/ipad.css
+++ b/css/ipad.css
@@ -1,15 +1,15 @@
 /* Ipad and Ipad Pro responsive 768-1366px*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1366px) and (orientation : portrait){
   header{
-  	padding-top: 70px;
+  	
   	height: 70vh;
   }
   .tit-p{
     font-size: 20px;
   }
-  .tit-a{
+  /*.tit-a{
     margin-top: 250px; 
-  }
+  }*/
   .container{
 	width: 100%; 
 	
