--- a/css/ipad.css
+++ b/css/ipad.css
@@ -13,12 +13,26 @@
   .container{
 	width: 100%; 
 	
- }
- .section1{
- 	min-height: 50vh; 
- }
- /*trans*/
-.trans{
-	display: none;
-}
+   }
+   .section1{
+   	min-height: 50vh; 
+   }
+   /*trans*/
+  .trans{
+  	display: none;
+  }
+  .section2{
+   border-top: 3px solid #1b1b1b;
+    border-bottom: 3px solid #1b1b1b;
+  }
+
+  .sBox1 p{
+    font-size: 22px;
+   
+  }
+  .sBox1  li{
+    font-size: 21px;
+    margin: 0;
+    padding: 0; 
+  }
 }
