--- a/css/style.css
+++ b/css/style.css
@@ -168,9 +168,103 @@ header{
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat:no-repeat;
-	height: 20vh; 
 	border-top: 3px solid lightblue;
 	border-bottom: 3px solid lightblue;
+	height: 20vh; 
 	box-shadow:0px 5px 15px 2px #1b1b1b,
 			   0px -5px 15px 2px #1b1b1b;
+}
+
+/*sec2*/
+.section2{
+	
+	min-height: 70vh;
+	
+	
+	position: relative;
+	overflow: hidden;
+}
+.section2:before{
+	content:" "; 
+	position: absolute;
+	top: 0;
+	bottom:0;
+	z-index: -1; 
+	right:0;
+	min-height: 70vh;
+	width: 45vw;
+	clip-path: polygon(20% 0%, 100% 0, 100% 100%, 0% 100%);
+	background: #1b1b1b; 
+
+}
+.section2:after{
+	content:" "; 
+	position: absolute;
+	top: 0;
+	bottom:0; 
+	right: 5vw;
+	z-index: -2;
+	min-height: 70vh;
+	width: 45vw;
+	clip-path: polygon(20% 0%, 100% 0, 100% 100%, 0% 100%);
+	background: rgba(37 ,37 ,37,1); 	
+}
+.container2{
+	width: 100%; 
+	margin: 7vh auto 5vh auto;
+	display: flex;
+	 
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+
+}
+.sBox1{
+	margin: 20px 5vw;
+	width: 45vw;
+	
+	
+}
+.sBox1 h1{
+	font-size: 30px;
+	padding-left: 50px;
+}
+.sBox1 p{
+	text-indent: 20px;
+	font-size: 20px;
+	padding:0  50px 0 0;
+	text-align: justify;
+}
+.sBox1  li{
+	font-size: 18px;
+	margin: 0;
+	padding: 0; 
+}
+.phoneTemp{
+	width: 335px;
+	display: block;
+	margin: 0 5vw 0 auto;
+
+}
+@media only screen and (max-width:960px){
+	.section2:before{
+
+		display: none;
+
+	}
+	.section2:after{
+		display: none;
+	}
+	.phoneTemp{
+		display: none;
+	}
+	.sBox1{
+		width: 100%
+	}
+	.sBox2{
+		display: none;
+	}
+	.sBox1 p{
+		padding: 0;	
+    }
 }
