--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	height: 10000px;
 }
 div{
