--- a/css/phone.css
+++ b/css/phone.css
@@ -1,9 +1,20 @@
 /* Phone responsive 180- 768px*/
 @media only screen and (min-device-width : 180px) and (max-device-width :  767px) and (orientation : portrait) {
   header{
-  	padding-top: 10vh;
-  	height: 80vh;
-  }
+  position: relative;
+  height: 80vh;
+  background: url("img/main.jpg");
+  background-position:top center;
+  /*background-attachment: fixed;*/
+  background-repeat:no-repeat;  
+  box-sizing: border-box;
+  padding-top: 13vh;
+  border-bottom:3px solid lightblue;
+  overflow: hidden;
+  display: block;
+  box-shadow:0px 15px 25px 5px #1b1b1b;
+}
+
   .div1{
     width: 90vw;
   }
