--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body{
 	padding: 0;
 	font-family: sans-serif;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	height: 10000px;
 }
 div{
 	box-sizing: border-box;
@@ -106,12 +105,7 @@ header{
 	flex-wrap: wrap;
 
 }
-@media only screen and (max-width:1260px){
-	.container{
-		width: 95%; 
-		transition: 0.2s ease-in-out;
-	}
-}
+
 .box{
 	margin: 20px 5px;
 	width: 320px ;
@@ -179,8 +173,9 @@ header{
 .section2{
 	
 	min-height: 70vh;
-	
-	
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	position: relative;
 	overflow: hidden;
 }
@@ -211,7 +206,7 @@ header{
 }
 .container2{
 	width: 100%; 
-	margin: 7vh auto 5vh auto;
+	
 	display: flex;
 	 
 	justify-content: space-between;
@@ -240,11 +235,57 @@ header{
 	margin: 0;
 	padding: 0; 
 }
+.sBox2{
+	width: 40vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+}
 .phoneTemp{
 	width: 335px;
 	display: block;
-	margin: 0 5vw 0 auto;
+	margin: 5vh 0; 
+}
 
+/*sec3*/
+.section3{
+	min-height: 20vh;
+	padding: 3vh 0;
+}
+.section3 h1{
+	margin: 5vh 0 2vh 0;
+	text-align: center;
+	font-size: 28px;
+
+}
+.findBox{
+margin: 20px 5px;
+	width: 220px ;
+
+	
+	
+
+}
+/*footer*/
+footer{
+	margin-top: 5vh;
+  	border-top: 2px dashed #777;
+}
+.p_copy{
+
+  background: #fff;
+  color: #777;
+  margin: 0;
+  padding: 30px 0;
+  text-align: center;
+  font-weight: bold;
+}
+@media only screen and (max-width:1260px){
+	.container{
+		width: 95%; 
+		transition: 0.2s ease-in-out;
+	}
 }
 @media only screen and (max-width:960px){
 	.section2:before{
