--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+html {
+  height: -webkit-fill-available;
+}
 body{
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	min-height: 100vh;
+  	min-height: -webkit-fill-available;
 }
 div{
 	box-sizing: border-box;
