--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 	padding: 0;
 	font-family: sans-serif;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	
+	height: 100%;
   	min-height: -webkit-fill-available;
 }
 div{
