--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  height: -webkit-fill-available;
+/*   height: -webkit-fill-available; */
 }
 body{
 	margin: 0;
@@ -7,7 +7,7 @@ body{
 	font-family: sans-serif;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	height: 100%;
-  	min-height: -webkit-fill-available;
+/*   	min-height: -webkit-fill-available; */
 }
 div{
 	box-sizing: border-box;
