--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -105,6 +105,7 @@
 .nav-active{
   transform: translateX(0);
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   border-radius:  0  ;
 }
 @keyframes navLinkFade{
