--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header{
 	background: url("img/main.jpg");
 	background-position:top center;
 	background-attachment: fixed;
-	background-size: 100%;
+	background-size: cover;
 	background-repeat:no-repeat;  
 	box-sizing: border-box;
 	padding-top: 13vh;
@@ -161,7 +161,7 @@ header{
 .trans{
 	background: url("img/main.jpg");
 	background-position: center;
-	background-size: 100%;
+	background-size: cover;
 	background-attachment: fixed;
 	background-repeat:no-repeat;
 	border-top: 3px solid lightblue;
